[tool.poetry]
name = "rabbithole"
version = "0.1.0"
description = ""
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.3.22"
cohere = "^4.4.1"
datasets = "^2.12.0"
langchain = "^0.0.168"
moviepy = "^1.0.3"
openai = "^0.27.6"
pdf2image = "^1.16.3"
pydub = "^0.25.1"
pymupdf = "^1.22.3"
pytesseract = "^0.3.10"
streamlit = "^1.22.0"
tiktoken = "^0.4.0"
transformers = "^4.29.1"
tqdm = "^4.65.0"
unstructured = "^0.6.6"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
